--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,5 @@ flutter.versionCode=1
 flutter.minSdkVersion=21
 flutter.compileSdkVersion=33
 flutter.targetSdkVersion=33
-sdk.dir=G:\\dev\\Android\\Sdk
-flutter.sdk=g:\\dev\\flutter
+sdk.dir=/Users/Markus.Miertschink/Library/Android/sdk
+flutter.sdk=/Users/Markus.Miertschink/dev/flutter
